--- a/styles.css
+++ b/styles.css
@@ -32,11 +32,256 @@ li {
 .rule {
   font-size: 20px;
 }
-
 .first-rule {
   color: red;
 }
-
 .last-rules {
   color: green;
+}
+/*Задание 3.9*/
+button[type='reset'] {
+  color: green;
+}
+[type] {
+  color: white;
+}
+/*Задание 3.10*/
+.link {
+  text-decoration: none;
+}
+[href^='./'] {
+  color: red;
+}
+[href^='https'] {
+  color: navy;
+}
+/*Задание 3.11*/
+.link {
+  text-decoration: none;
+}
+[href$='html'] {
+  color: green;
+}
+[href$='css'] {
+  color: orangered;
+}
+/*Задание 3.12*/
+.link {
+  text-decoration: none;
+}
+[href*='about'] {
+  color: green;
+}
+[href*='com'] {
+  color: orangered;
+}
+/*Задание 3.13*/
+.warning {
+  background-color: white;
+  color: red;
+}
+#sending {
+  background-color: teal;
+  color: white;
+}
+
+/*Задание 3.14*/
+.warning {
+  background-color: white;
+  color: red;
+}
+#inline {
+  background-color: teal;
+  color: white;
+}
+/*Задание 3.15*/
+div {
+  background-color: navy !important;
+  color: white !important;
+}
+.warning {
+  background-color: white;
+  color: red;
+}
+#inline {
+  background-color: red;
+  color: white;
+}
+
+/*Задание 3.16*/
+ul {
+  padding: 0;
+  list-style: none;
+}
+.menu > .menu-item {
+  display: inline-block;
+  vertical-align: top;
+}
+
+/*Задание 3.16*/
+ul {
+  padding: 0;
+  list-style: none;
+}
+.menu {
+  display: inline-block;
+  vertical-align: top;
+  opacity: 1;
+}
+.sub-menu {
+  opacity: 0;
+  margin-left: 100px;
+}
+.menu-item:hover {
+  opacity: 1;
+}
+/*Задание 3.17*/
+ul {
+  padding: 0;
+  list-style: none;
+}
+.menu > .menu-item {
+  display: inline-block;
+  vertical-align: top;
+  opacity: 1;
+}
+.sub-menu .menu-item {
+  opacity: 0;
+  margin-left: 100px;
+}
+.menu-item:hover .menu-item {
+  opacity: 1;
+}
+/*Задание 3.18*/
+.item-1 + .item {
+  color: red;
+}
+/*Задание 3.19*/
+.item-2 ~ .item {
+  color: red;
+}
+/*Задание 3.20*/
+.headline.title {
+  color: navy;
+}
+.title[title] {
+  color: maroon;
+}
+/*Задание 3.21*/
+.cards {
+  color: navy;
+}
+.last-of-type {
+  color: firebrick;
+}
+/*Задание 3.22*/
+.list {
+  padding-left: 0;
+  list-style: none;
+  color: green;
+}
+.list-link {
+  color: green;
+}
+/*Задание 3.24*/
+.box {
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
+}
+.red {
+  background-color: rgb(255, 0, 0);
+}
+.green {
+  background-color: rgb(0, 255, 0);
+}
+.blue {
+  background-color: rgb(0, 0, 255);
+}
+/*Задание 3.25*/
+.box {
+  background-color: #000;
+  color: #fff;
+}
+.red {
+  background-color: #f00;
+}
+.green {
+  background-color: #0f0;
+}
+.blue {
+  background-color: #00f;
+}
+/*Хадание 3.26*/
+.lightness {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  margin: 0.5rem;
+  text-align: center;
+  border: 1px solid gold;
+}
+.lightness-100 {
+  background-color: hsl(0, 100%, 100%);
+}
+.lightness-75 {
+  background-color: hsl(0, 100%, 75%);
+}
+.lightness-50 {
+  background-color: hsl(0, 100%, 50%);
+}
+.lightness-25 {
+  background-color: hsl(0, 100%, 25%);
+  color: hsl(0, 0%, 100%);
+}
+.lightness-0 {
+  background-color: hsl(0, 100%, 0%);
+  color: hsl(0, 0%, 100%);
+}
+/*Хадание 3.27*/
+.container {
+  padding: 1rem;
+  background-color: navy;
+}
+.box {
+  width: 200px;
+  height: 50px;
+  margin: 1rem auto;
+  color: #fff;
+  font-size: 24px;
+  line-height: 50px;
+  text-align: center;
+  cursor: pointer;
+  background-color: orchid;
+  border: 4px solid gold;
+}
+.opacity {
+  opacity: 0.5;
+}
+.opacity:hover,
+.opacity:focus {
+  opacity: 1;
+}
+.transparent:hover,
+.transparent:focus {
+  background-color: transparent;
+}
+/*Хадание 3.28*/
+[data-color] {
+  padding: 0.5rem 1.5rem;
+  border: none;
+  background-color: #008;
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+[data-color='rgba']:hover {
+  background-color: rgba(0, 0, 136, 0.5);
+}
+
+[data-color='hsla']:hover {
+  background-color: hsla(240, 100%, 27%, 0.5);
+}
+
+[data-color='hexa']:hover {
+  background-color: #00008a80;
 }
